jmod re-packing support